--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,4 +8,6 @@
 }
 @import 'blocks/promo';
 @import 'blocks/header';
-@import 'blocks/buttons'
+@import 'blocks/buttons';
+@import 'blocks/benefits';
+@import 'blocks/media';
