--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -2,7 +2,6 @@
   width: 150px;
   height: 30px;
   background-color: $main-color;
-  border-radius: 5px;
   border: none;
   font-size: 12px;
   font-weight: 500;
@@ -13,6 +12,11 @@
     width: 300px;
     height: 50px;
     font-size: 16px;
-    font-weight: 500;
+  }
+  &_submit{
+    width: 300px;
+    height: 55px;
+    border-radius: 5px;
+    font-size: 16px;
   }
 }
