--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,5 +9,8 @@
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
+@import 'blocks/titles';
 @import 'blocks/benefits';
+@import 'blocks/_consultation';
+@import 'blocks/_forms';
 @import 'blocks/media';
